--- a/cartographer_ros/cartographer_ros_msgs/CMakeLists.txt
+++ b/cartographer_ros/cartographer_ros_msgs/CMakeLists.txt
@@ -44,6 +44,7 @@ add_service_files(
     WriteState.srv
     MapLoad.srv
     DeleteTrajectory.srv
+    StratTrajectoryFromFile.srv
 )
 
 generate_messages(
